// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`todo creation > 0. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy milk",
  },
}
`;

exports[`todo creation > 0. todo.onDraft > NewTodoForm (deep) 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onInput={[Function]}
    placeholder="New Todo"
    type="text"
    value="buy milk"
  />
  <button
    className="btn"
    type="submit"
  >
    Create
  </button>
</form>
`;

exports[`todo creation > 0. todo.onDraft > NewTodoForm (shallow) 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onInput={[Function]}
    placeholder="New Todo"
    type="text"
    value="buy milk"
  />
  <button
    className="btn"
    type="submit"
  >
    Create
  </button>
</form>
`;

exports[`todo creation > 0. todo.onDraft > Page (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy milk"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`todo creation > 0. todo.onDraft > Page (shallow) 1`] = `
<React.Fragment>
  <h1>
    To-do List
  </h1>
  <NewTodoForm />
  <ClientOnly>
    <TodoToolbar />
    <TodoList />
  </ClientOnly>
</React.Fragment>
`;

exports[`todo creation > 0. todo.onDraft > TodoList (deep) 1`] = `<ul />`;

exports[`todo creation > 0. todo.onDraft > TodoList (shallow) 1`] = `<ul />`;

exports[`todo creation > 0. todo.onDraft > TodoToolbar (deep) 1`] = `
[
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
]
`;

exports[`todo creation > 0. todo.onDraft > TodoToolbar (shallow) 1`] = `
<React.Fragment>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  Hide completed
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>
</React.Fragment>
`;

exports[`todo creation > 1. todo.onAdd > $stan changes 1`] = `
{
  "todo": {
    "draft": "",
    "filtered": {
      "0": {
        "id": "#1580601600001",
        "text": "buy milk",
      },
    },
    "map": {
      "#1580601600001": {
        "id": "#1580601600001",
        "text": "buy milk",
      },
    },
  },
}
`;

exports[`todo creation > 1. todo.onAdd > NewTodoForm (deep) 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onInput={[Function]}
    placeholder="New Todo"
    type="text"
    value=""
  />
  <button
    className="btn"
    type="submit"
  >
    Create
  </button>
</form>
`;

exports[`todo creation > 1. todo.onAdd > NewTodoForm (shallow) 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onInput={[Function]}
    placeholder="New Todo"
    type="text"
    value=""
  />
  <button
    className="btn"
    type="submit"
  >
    Create
  </button>
</form>
`;

exports[`todo creation > 1. todo.onAdd > Page (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`todo creation > 1. todo.onAdd > Page (shallow) 1`] = `
<React.Fragment>
  <h1>
    To-do List
  </h1>
  <NewTodoForm />
  <ClientOnly>
    <TodoToolbar />
    <TodoList />
  </ClientOnly>
</React.Fragment>
`;

exports[`todo creation > 1. todo.onAdd > TodoList (deep) 1`] = `
<ul>
  <li
    className=""
  >
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
    buy milk
     
    <button
      onClick={[Function]}
    >
      ☠
    </button>
  </li>
</ul>
`;

exports[`todo creation > 1. todo.onAdd > TodoList (shallow) 1`] = `
<ul>
  <Todo
    id="#1580601600001"
  />
</ul>
`;

exports[`todo creation > 1. todo.onAdd > TodoToolbar (deep) 1`] = `
[
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
]
`;

exports[`todo creation > 1. todo.onAdd > TodoToolbar (shallow) 1`] = `
<React.Fragment>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  Hide completed
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>
</React.Fragment>
`;
